@@ -231,7 +231,7 @@ public class MeetingElement implements Comparable<MeetingElement> {
 						for(Iterator<Date> dateIt = dates.keySet().iterator(); dateIt.hasNext();){
 							Date startDate = dateIt.next();
 							Date endDate = dates.get(startDate);				
-							MeetingElement me = new MeetingElement(startDate, endDate, null, null, null, bldgAbbv, roomNbr, roomType, new Double(hours).toString(), instructorId, bannerSection, clazz);
+							MeetingElement me = new MeetingElement(startDate, endDate, null, null, null, bldgAbbv, roomNbr, roomType, Double.valueOf(hours).toString(), instructorId, bannerSection, clazz);
 							elements.add(me);
 						}
 					}
@@ -240,7 +240,7 @@ public class MeetingElement implements Comparable<MeetingElement> {
 					for(Iterator<Date> dateIt = dates.keySet().iterator(); dateIt.hasNext();){
 						Date startDate = dateIt.next();
 						Date endDate = dates.get(startDate);				
-						MeetingElement me = new MeetingElement(startDate, endDate, null, null, null, null, null, null, new Double(hours).toString(), instructorId, bannerSection, clazz);
+						MeetingElement me = new MeetingElement(startDate, endDate, null, null, null, null, null, null, Double.valueOf(hours).toString(), instructorId, bannerSection, clazz);
 						elements.add(me);
 					}
 				}
@@ -656,7 +656,7 @@ public class MeetingElement implements Comparable<MeetingElement> {
 									} else if (me.getHoursToArrange() == null && getHoursToArrange() == null){
 										return(0);
 									} else {
-										return(new Float(getHoursToArrange()).compareTo(new Float(me.getHoursToArrange())));
+										return(Float.valueOf(getHoursToArrange()).compareTo(Float.valueOf(me.getHoursToArrange())));
 									}
 								}
 							} else {
